# Federated-Learning-Frameworks-Comparative

./: .gitignore  README.md
memoria/: configuracion.tex  main.tex  referencias.bib  resultados_rendimiento.tex
memoria/cls/: eps-metadata.tex
memoria/contenido/anexos/: acronimos.tex
memoria/contenido/capitulos/: conclusiones.tex  estado-del-arte.tex  experimentos.tex  flexibilidad.tex  fundamentos.tex  introduccion.tex  marco-teorico.tex  metodologia.tex  objetivos.tex  resultados.tex  resultados_rendimiento.tex  usabilidad.tex
memoria/contenido/frontmatter/: preliminares.tex
memoria/sty/: eps-portadas.sty
resultados/: README.md
src/fedml/: fedml_aggregator.py  fedml_trainer.py  main.py  run_fedml_experiments.sh  task.py
src/flower/: environment-tfg-flower.yml  pyproject.toml  requirements-tfg-flower.txt  run_flower_experiments.sh
src/flower/flower_model/: client_app.py  server_app.py
src/flower/pytorchexample/: task.py
src/flower/scripts_flexibilidad_tfg/: patch_flower_strategy.py
src/nvflare/: eval_final.py  run_nvflare_experiments.sh
src/nvflare/job/: meta.conf
src/nvflare/job/app/config/: config_fed_client.conf  config_fed_server.conf
src/nvflare/job/app/custom/: client.py  task.py
