[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfg-flower-pytorch"
version = "0.1.0"
description = "Federated Learning with PyTorch and Flower for TFG"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "raul"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
fraction-evaluate = 0.0
local-epochs = 1
learning-rate = 0.03
batch-size = 32
strategy = "fedavg"
